--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension LWP::Simple::Post.
 
+0.02  Sat Aug 20 10:40:00 2005
+  + Added a post_xml() method
+
 0.01  Tue Aug  9 10:47:10 2005
 	- original version; created by h2xs 1.9 with options
 		-AXc -n LWP::Simple::Post
