--- a/README
+++ b/README
@@ -1,40 +1,33 @@
-LWP-Simple-Post version 0.01
-============================
+NAME
+    LWP::Simple::Post - Single-method POST requests
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+DESCRIPTION
+    Really simple wrapper to HTTP POST requests
 
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+SYNOPSIS
+     use LWP::Simple::Post qw(post post_xml);
 
-INSTALLATION
+     my $response = post('http://production/receiver', 'some text');
 
-To install this module type the following:
+OVERVIEW
+    This module is intended to do for HTTP POST requests what LWP::Simple
+    did for GET requests. If you want to do anything complicated, this
+    module is not for you. If you just want to push data at a URL with the
+    minimum of fuss, you're the target audience.
 
-   perl Makefile.PL
-   make
-   make test
-   make install
+METHODS
+  post
+     my $content = post( string $url, string $data );
 
-DEPENDENCIES
+    Posts the data in $data to the URL in $url, and returns what we got
+    back. Returns "undef" on failure.
 
-This module requires these other modules and libraries:
+AUTHOR
+    Peter Sergeant - "pete@clueball.com"
 
-  blah blah blah
+COPYRIGHT
+    Copyright 2005 Pete Sergeant.
 
-COPYRIGHT AND LICENCE
-
-Put the correct copyright and licence information here.
-
-Copyright (C) 2005 by Peter Sergeant
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.8.5 or,
-at your option, any later version of Perl 5 you may have available.
-
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
