--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension LWP::Simple::Post.
 
+0.03  Tue Oct 18 01:52:00 2005
+	- Fixed minor POD error
+
 0.02  Sat Aug 20 10:40:00 2005
   + Added a post_xml() method
 
